Fix for bug 205165 (a href link fails to work until window is resized)

Modified PlaceFrameView() to pass in the cached overflow area rect for the frame, if it has one, when calling

SyncFrameViewAfterReflow().

r=jkeiser@netscape.com  sr=dbaron@dbaron.org